# Fastapi-DDD-Hexagonal-Todo

./: .env.example  pyproject.toml  readme.md  requirements.txt
postgres/: docker-compose.yml
src/: main.py
src/application/dto/: todo_dto.py
src/application/interfaces/: event_bus.py  unit_of_work.py
src/application/use_cases/commands/: complete_todo.py  create_todo.py  update_todo.py
src/application/use_cases/queries/: get_todo.py  list_todos.py
src/config/: settings.py
src/domain/: exceptions.py
src/domain/entities/: todo.py
src/domain/events/: base.py  todo_events.py
src/domain/repositories/: todo_repository.py
src/domain/value_objects/: priority.py  todo_id.py  todo_status.py
src/infrastructure/api/: exception_handlers.py  middleware.py
src/infrastructure/api/v1/: dependencies.py  schemas.py
src/infrastructure/api/v1/endpoints/: todos.py
src/infrastructure/events/: event_bus.py  handlers.py
src/infrastructure/persistence/sqlalchemy/: database.py  models.py  read_repositories.py  repositories.py  unit_of_work.py
