[tool.poetry]
name = "fastapi-ddd-hexagonal-todo"
version = "0.1.0"
description = ""
authors = ["Mahdi <mahdighadiriafzal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.119.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
